tests/machine/x/c/map_membership.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/map_membership.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/map_membership.c:59:26: warning: passing argument 2 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
   59 |   map_int_bool_put(&_t1, "a", 1);
      |                          ^~~
      |                          |
      |                          char *
/workspace/mochi/tests/machine/x/c/map_membership.c:38:51: note: expected ‘int’ but argument is of type ‘char *’
   38 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                               ~~~~^~~
/workspace/mochi/tests/machine/x/c/map_membership.c:60:26: warning: passing argument 2 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
   60 |   map_int_bool_put(&_t1, "b", 2);
      |                          ^~~
      |                          |
      |                          char *
/workspace/mochi/tests/machine/x/c/map_membership.c:38:51: note: expected ‘int’ but argument is of type ‘char *’
   38 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                               ~~~~^~~
/workspace/mochi/tests/machine/x/c/map_membership.c:61:11: error: incompatible types when initializing type ‘int’ using type ‘map_int_bool’
   61 |   int m = _t1;
      |           ^~~
/workspace/mochi/tests/machine/x/c/map_membership.c:62:22: error: expected ‘)’ before ‘in’
   62 |   printf("%d\n", ("a" in m));
      |                  ~   ^~~
      |                      )
/workspace/mochi/tests/machine/x/c/map_membership.c:62:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
   62 |   printf("%d\n", ("a" in m));
      |           ~^     ~~~~~~~
      |            |     |
      |            int   char *
      |           %s
/workspace/mochi/tests/machine/x/c/map_membership.c:63:22: error: expected ‘)’ before ‘in’
   63 |   printf("%d\n", ("c" in m));
      |                  ~   ^~~
      |                      )
/workspace/mochi/tests/machine/x/c/map_membership.c:63:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
   63 |   printf("%d\n", ("c" in m));
      |           ~^     ~~~~~~~
      |            |     |
      |            int   char *
      |           %s

   1: #include <stdio.h>
